# e2am

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml  release.yml
docs/: architecture.md
examples/: cli_model.py  quickstart_monitor.py  quickstart_trainer.py
src/e2am/: __init__.py  exceptions.py
src/e2am/cli/: __init__.py  loader.py  main.py
src/e2am/config/: __init__.py  settings.py
src/e2am/integrations/: __init__.py  huggingface.py
src/e2am/metrics/: __init__.py  classification.py  green.py  tracker.py
src/e2am/monitoring/: __init__.py  api.py  carbon.py  energy.py  result.py  samplers.py  session.py
src/e2am/optimize/: __init__.py  analyzer.py  suggestions.py
src/e2am/plugins/: __init__.py  base.py  mlflow.py  tensorboard.py  wandb.py  webhooks.py
src/e2am/profiler/: __init__.py  flops.py  latency.py  memory.py
src/e2am/reports/: __init__.py  common.py  dashboard.py  generate.py  html.py  leaderboard.py  markdown.py  pdf.py
src/e2am/trainer/: __init__.py  callbacks.py  result.py  trainer.py
src/e2am/utils/: __init__.py  hardware.py  logging.py  nvml.py
src/e2am/visualization/: __init__.py  plots.py  style.py
tests/: conftest.py  test_carbon.py  test_classification.py  test_cli.py  test_config.py  test_energy.py  test_flops.py  test_green.py  test_hardware.py  test_huggingface.py  test_import.py  test_latency.py  test_memory.py  test_monitor_api.py  test_nvml.py  test_optimize.py  test_plots.py  test_plugins.py  test_reports.py  test_samplers.py  test_session.py  test_tracker.py  test_trainer.py
