[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "e2am"
dynamic = ["version"]
description = "E2AM — Energy Efficient AI Models: automatic energy, carbon, and performance profiling for AI training."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Satyanarayana", email = "satyanarayana.25phd7141@vitap.ac.in" },
]
keywords = [
    "green-ai",
    "energy-efficiency",
    "carbon-emissions",
    "profiling",
    "pytorch",
    "sustainability",
    "mlops",
    "benchmarking",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]

# NOTE: PyTorch is intentionally NOT a hard dependency. Users install the
# torch build matching their hardware (CUDA/ROCm/CPU). E2AM degrades
# gracefully: monitoring works without torch; training features require it.
dependencies = [
    "psutil>=5.9",
    "pydantic>=2.0",
    "rich>=13.0",
    "typer>=0.9",
    "PyYAML>=6.0",
    "nvidia-ml-py>=11.495.46",
    "numpy>=1.23",
    "pandas>=1.5",
    "matplotlib>=3.6",
]

[project.optional-dependencies]
carbon = ["codecarbon>=2.3"]
pdf = ["reportlab>=4.0"]
dashboard = ["plotly>=5.18"]
all = ["e2am[carbon,pdf,dashboard]"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "black>=24.0",
    "isort>=5.13",
    "mypy>=1.8",
    "types-PyYAML",
    "types-psutil",
    "pre-commit>=3.5",
]

[project.urls]
Homepage = "https://github.com/Shanmuk4622/e2am"
Repository = "https://github.com/Shanmuk4622/e2am"
Issues = "https://github.com/Shanmuk4622/e2am/issues"

[project.scripts]
e2am = "e2am.cli.main:app"

[tool.hatch.version]
path = "src/e2am/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/e2am"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["e2am"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
# Used deliberately in docstrings: multiplication sign (TDP × utilization),
# en dash for numeric ranges (0–100).
allowed-confusables = ["×", "–"]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501", # line length is enforced by black
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "pynvml.*",
    "codecarbon.*",
    "matplotlib.*",
    "plotly.*",
    "reportlab.*",
    "pandas.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "gpu: tests that require an NVIDIA GPU (deselect with '-m \"not gpu\"')",
    "torch: tests that require PyTorch",
    "slow: long-running tests",
]

[tool.coverage.run]
source = ["src/e2am"]
